--- a/product/ProductModule/pom.xml
+++ b/product/ProductModule/pom.xml
@@ -9,6 +9,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.4.RELEASE</version>
+		<packaging>war</packaging>
 	</parent>
 
 	<properties>
