--- a/product/ProductModule/pom.xml
+++ b/product/ProductModule/pom.xml
@@ -5,11 +5,11 @@
 	<groupId>Product</groupId>
 	<artifactId>Product</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
-		<packaging>war</packaging>
+		<version>2.2.4.RELEASE</version
 	</parent>
 
 	<properties>
